force-app/main/default/objects/ADM_Sprint__c/ADM_Sprint__c.object-meta.xml
<CustomObject>
    <customHelpPage>ADM_CreateSprintOverview</customHelpPage>
    <description>Added to support User Story for Scrumforce integration into GUS.</description>
    <label>Sprint</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sprints</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>