force-app/main/default/objects/ADM_Sprint__c/fields/Backlog__c.field-meta.xml
<CustomField>
    <fullName>Backlog__c</fullName>
    <formula>HYPERLINK(&quot;/apex/ADM_SprintBacklog?id=&quot; &amp;  Id , &quot;View Backlog&quot;, &quot;_top&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Backlog</label>
    <type>Text</type>
</CustomField>