force-app/main/default/objects/ADM_Sprint__c/fields/Committed_Points__c.field-meta.xml
<CustomField>
    <fullName>Committed_Points__c</fullName>
    <label>Committed Points</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>