force-app/main/default/objects/ADM_Sprint__c/fields/Committed_Story_Points_Completed__c.field-meta.xml
<CustomField>
    <fullName>Committed_Story_Points_Completed__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Committed Story Points Completed</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>