force-app/main/default/objects/ADM_Sprint__c/fields/Completed_Items__c.field-meta.xml
<CustomField>
    <fullName>Completed_Items__c</fullName>
    <label>Completed Items</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>