force-app/main/default/objects/ADM_Sprint__c/fields/Completed_Story_Points__c.field-meta.xml
<CustomField>
    <fullName>Completed_Story_Points__c</fullName>
    <label>Velocity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>