force-app/main/default/objects/ADM_Sprint__c/fields/Completion_Committed_Items__c.field-meta.xml
<CustomField>
    <fullName>Completion_Committed_Items__c</fullName>
    <formula>IF(
    OR(
        ISBLANK(Committed_Items_Completed__c),
        ISBLANK(Committed_Items__c)
    ),
    0,
    Committed_Items_Completed__c/Committed_Items__c
)</formula>
    <label>Completion Committed Items</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>