force-app/main/default/objects/ADM_Sprint__c/fields/Completion_Committed_Story_Points__c.field-meta.xml
<CustomField>
    <fullName>Completion_Committed_Story_Points__c</fullName>
    <formula>IF(
OR(
ISBLANK(Committed_Story_Points_Completed__c),
ISBLANK(Committed_Points__c)
),
0,
Committed_Story_Points_Completed__c/Committed_Points__c
)</formula>
    <label>Completion Committed Story Points</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>