force-app/main/default/objects/ADM_Sprint__c/fields/Completion_Items__c.field-meta.xml
<CustomField>
    <fullName>Completion_Items__c</fullName>
    <formula>IF(
    OR(
        ISBLANK(Completed_Items__c),
        ISBLANK(Committed_Items__c)
    ),
    0,
    Completed_Items__c/Committed_Items__c
)</formula>
    <label>Completion Items</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>