force-app/main/default/objects/ADM_Sprint__c/fields/Completion_Story_Points__c.field-meta.xml
<CustomField>
    <fullName>Completion_Story_Points__c</fullName>
    <formula>IF(
    OR(
        ISBLANK(Completed_Story_Points__c),
        ISBLANK(Committed_Points__c)
    ),
    0,
    Completed_Story_Points__c/Committed_Points__c
)</formula>
    <label>Completion Story Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>