force-app/main/default/objects/ADM_Sprint__c/fields/Days_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Days_Remaining__c</fullName>
    <formula>IF( TODAY() &lt; Start_Date__c, &#39;NOT STARTED&#39;, IF( End_Date__c &gt;= TODAY(), TEXT( ROUND(End_Date__c - TODAY(), 0) + 1 ), &#39;CLOSED&#39; ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Remaining</label>
    <type>Text</type>
</CustomField>