force-app/main/default/objects/ADM_Sprint__c/fields/Definition_of_Done_Met__c.field-meta.xml
<CustomField>
    <fullName>Definition_of_Done_Met__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Definition of Done Met</label>
    <type>Checkbox</type>
</CustomField>