force-app/main/default/objects/ADM_Sprint__c/fields/Definition_of_Ready_Met__c.field-meta.xml
<CustomField>
    <fullName>Definition_of_Ready_Met__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Definition of Ready Met</label>
    <type>Checkbox</type>
</CustomField>