force-app/main/default/objects/ADM_Sprint__c/fields/Discount_Work__c.field-meta.xml
<CustomField>
    <fullName>Discount_Work__c</fullName>
    <defaultValue>0</defaultValue>
    <description>% to take off of the total time available</description>
    <label>Discount work time (%)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>