force-app/main/default/objects/ADM_Sprint__c/fields/Goals__c.field-meta.xml
<CustomField>
    <fullName>Goals__c</fullName>
    <label>Goals</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>