force-app/main/default/objects/ADM_Sprint__c/fields/Hours_in_a_work_day__c.field-meta.xml
<CustomField>
    <fullName>Hours_in_a_work_day__c</fullName>
    <defaultValue>6</defaultValue>
    <label>Hours in a work day</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>