force-app/main/default/objects/ADM_Sprint__c/fields/NameValidator__c.field-meta.xml
<CustomField>
    <fullName>NameValidator__c</fullName>
    <description>This field is used to enforce a unique name as the standard Name field does not offer the option to enforce uniqueness.</description>
    <label>NameValidator</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>