force-app/main/default/objects/ADM_Sprint__c/fields/Projected_Velocity__c.field-meta.xml
<CustomField>
    <fullName>Projected_Velocity__c</fullName>
    <label>Projected Velocity</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>