force-app/main/default/objects/ADM_Sprint__c/fields/Release_Burndown_Calc__c.field-meta.xml
<CustomField>
    <fullName>Release_Burndown_Calc__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Internal field used by the system to figure out if it should calculate a release burndown for this sprint. This field is updated by a Time Based Workflow and causes a trigger action to fire and calculate the Release_Burndown_Item__c</description>
    <label>Release Burndown Calculated</label>
    <type>Checkbox</type>
</CustomField>