force-app/main/default/objects/ADM_Sprint__c/fields/Retrospective__c.field-meta.xml
<CustomField>
    <fullName>Retrospective__c</fullName>
    <defaultValue>&quot;What went well? --&gt; &quot;  &amp; BR()  &amp;  &quot;What didn&#39;t go well? --&gt;&quot;  &amp; BR()  &amp; &quot;What can we do differently? --&gt;&quot;</defaultValue>
    <label>Retrospective</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>