force-app/main/default/objects/ADM_Sprint__c/fields/Risks__c.field-meta.xml
<CustomField>
    <fullName>Risks__c</fullName>
    <label>Risks</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>