force-app/main/default/objects/ADM_Sprint__c/fields/Scrum_Team__c.field-meta.xml
<CustomField>
    <fullName>Scrum_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scrum Team</label>
    <referenceTo>ADM_Scrum_Team__c</referenceTo>
    <relationshipLabel>Sprints</relationshipLabel>
    <relationshipName>Sprints</relationshipName>
    <type>Lookup</type>
</CustomField>