force-app/main/default/objects/ADM_Sprint__c/fields/Total_Workdays__c.field-meta.xml
<CustomField>
    <fullName>Total_Workdays__c</fullName>
    <label>Total Workdays</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>