force-app/main/default/objects/ADM_Sprint__c/fields/Transformed__c.field-meta.xml
<CustomField>
    <fullName>Transformed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Transformed</label>
    <type>Checkbox</type>
</CustomField>