force-app/main/default/objects/ADM_Sprint__c/validationRules/Hours_In_A_Work_Day_Neg.validationRule-meta.xml
<ValidationRule>
    <fullName>Hours_In_A_Work_Day_Neg</fullName>
    <active>true</active>
    <description>Limit hours in a work day to positive numbers</description>
    <errorConditionFormula>Hours_in_a_work_day__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Hours_in_a_work_day__c</errorDisplayField>
    <errorMessage>Hours in a work day cannot be a negative number</errorMessage>
</ValidationRule>