force-app/main/default/objects/ADM_Sprint__c/validationRules/Projected_Velocity_Neg.validationRule-meta.xml
<ValidationRule>
    <fullName>Projected_Velocity_Neg</fullName>
    <active>true</active>
    <description>Limit projected velocity to positive numbers</description>
    <errorConditionFormula>Projected_Velocity__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Projected_Velocity__c</errorDisplayField>
    <errorMessage>Projected velocity cannot be a negative number</errorMessage>
</ValidationRule>