force-app/main/default/objects/ADM_Sprint__c/validationRules/Scrum_Team_Is_Active.validationRule-meta.xml
<ValidationRule>
    <fullName>Scrum_Team_Is_Active</fullName>
    <active>true</active>
    <errorConditionFormula>Scrum_Team__r.Active__c = false</errorConditionFormula>
    <errorMessage>The scrum team you selected is not active.</errorMessage>
</ValidationRule>