force-app/main/default/objects/ADM_Sprint__c/validationRules/Verify_end_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Verify_end_date</fullName>
    <active>true</active>
    <description>Make sure that end date &gt; start date (accidents happen)</description>
    <errorConditionFormula>Start_Date__c &gt;= End_Date__c</errorConditionFormula>
    <errorMessage>Your End Date must be after your Start Date</errorMessage>
</ValidationRule>