force-app/main/default/objects/ADM_Sprint__c/listViews/GUS_Sprints.listView-meta.xml
<ListView>
    <fullName>GUS_Sprints</fullName>
    <columns>NAME</columns>
    <columns>Days_Remaining__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Completed_Story_Points__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Scrum_Team__c</field>
        <operation>equals</operation>
        <value>GUS</value>
    </filters>
    <label>GUS Sprints</label>
</ListView>